--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link res ="stylesheet"href="style.css>
 </head>
 <body>
-    <h1></h1>
+    <h1>MC KEVIN</h1>
+    <p></p>
 </body>
 </html>
