--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>MC KEVIN</h1>
-    <p></p>
-</body>
-</html>
+    <p>MC Kevin (1998-2021) foi um cantor e compositor brasileiro de funk e hip-hop. Ele ganhou popularidade com suas músicas e apresentações enérgações com outros artistas.
+    <p>O MC Kevin iniciou sua carreira musical em meados dos anos 2000, ganhando popularidade com suas letras enérgicas e batidas contagiante no gênero funk e hip-hop</p>
+    
