--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
 <body>
     <h1>MC KEVIN</h1>
     <p>MC Kevin (1998-2021) foi um cantor e compositor brasileiro de funk e hip-hop. Ele ganhou popularidade com suas músicas e apresentações enérgações com outros artistas.
-    <p>O MC Kevin iniciou sua carreira musical em meados dos anos 2000, ganhando popularidade com suas letras enérgicas e batidas contagiante no gênero funk e hip-hop</p>
-    
+    <p>O MC Kevin iniciou sua carreira musical em meados dos anos 2000, ganhando popularidade com suas letras enérgicas e batidas contagiante no gênero funk e hip-hop.</p>
+    <h2>sua trajetoria na love funk</h2>
+    <p>Artista brasileiro de funk e hip-hop, conhecido por suas músicas românticas e sensuais na cena Love Funk nos anos 2000. Contribuiu para a evolução do funk carioca e deixou um legado importante na música brasileira.</p           
+<img src="">
+<ul>
+    <h3> ALBUNS </h3>
+    <li>MC KEVIN</li>
+    <li>MC KIVIN NO ESTUDIO  SHOWLIVRE</li>
+    <li>FENIX</li>
+    <li>PASSADO E PRESENTE</li>
+    <li>O MENINO AINDA ENCANTA A QUEBRADA</li>
+    <li>MIXTAPE FUTURO PROMETIDO</li>
+    </ul>
+</body>
+</html>
+        
