--- a/index.html
+++ b/index.html
@@ -5,23 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link res ="stylesheet"href="style.css>
+    
 </head>
 <body>
-    <h1>MC KEVIN</h1>
-    <p>MC Kevin (1998-2021) foi um cantor e compositor brasileiro de funk e hip-hop. Ele ganhou popularidade com suas músicas e apresentações enérgações com outros artistas.
-    <p>O MC Kevin iniciou sua carreira musical em meados dos anos 2000, ganhando popularidade com suas letras enérgicas e batidas contagiante no gênero funk e hip-hop.</p>
-    <h2>sua trajetoria na love funk</h2>
-    <p>Artista brasileiro de funk e hip-hop, conhecido por suas músicas românticas e sensuais na cena Love Funk nos anos 2000. Contribuiu para a evolução do funk carioca e deixou um legado importante na música brasileira.</p           
-<img src="">
-<ul>
-    <h3> ALBUNS </h3>
-    <li>MC KEVIN</li>
-    <li>MC KIVIN NO ESTUDIO  SHOWLIVRE</li>
-    <li>FENIX</li>
-    <li>PASSADO E PRESENTE</li>
-    <li>O MENINO AINDA ENCANTA A QUEBRADA</li>
-    <li>MIXTAPE FUTURO PROMETIDO</li>
-    </ul>
+    <h1>O bonde do mc kevin</h1>
+ <h1>Quem é o MC Kevin?</h1>
+ <p>O MC Kevin é um artista brasileiro de funk e hip-hop, conhecido por suas letras enérgicas e batidas contagiante.</p>
+ <p>Ele conquistou o coração de muitos fãs com suas músicas que falam de amor, vida e superação.</p>
+ 
+ <h1>Músicas</h1>
+ <p>O MC Kevin tem uma discografia repleta de sucessos, incluindo "Ela É Má", "Deixa Eu Ir" e "Vida Louca".</p>
+ <p>Suas músicas são uma mistura de funk e hip-hop, com letras que refletem sua visão de mundo.</p>
+ 
+ <h1>Shows</h1>
+ <p>O MC Kevin é conhecido por seus shows enérgicos e emocionais, que sempre deixam o público dançando e cantando.</p>
+ <p>Ele já se apresentou em várias cidades do Brasil e é um dos artistas mais populares do funk e hip-hop nacional.</p>
+ 
+ <h2>Músicas mais populares:</h2>
+ <ul>
+ <li>Ela É Má</li>
+ <li>Deixa Eu Ir</li>
+ <li>Vida Louca</li>
+ <li>O Bonde</li>
+ </ul>
+ 
+ <img src="https://via.placeholder.com/200x200" alt="Imagem do MC Kevin">
 </body>
 </html>
         
