--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link res="stylesheet" href="style.cs">
-
+    <link res="stylesheet" href="style.css">
 </head>
 <body>
     <h1>O bonde do mc kevin</h1>
+    
  <h1>Quem é o MC Kevin?</h1>
  <p>O MC Kevin é um artista brasileiro de funk e hip-hop, conhecido por suas letras enérgicas e batidas contagiante.</p>
  <p>Ele conquistou o coração de muitos fãs com suas músicas que falam de amor, vida e superação.</p>
