--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
  <li>O Bonde</li>
  </ul>
  
- <img src="https://via.placeholder.com/200x200" alt="Imagem do MC Kevin">
+ <img src="imagem_2025-07-03_223624332.png" alt="Imagem do MC Kevin">
 </body>
 </html>
         
